Fixed error where hidden fields became visible in edit screen

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -126,7 +126,7 @@
 
   }
 
-  .field {
+  .right-settings .field {
     position: relative;
     float: right;
     width: 24px;
